methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:14: error: ';' expected but ',' found.
    avance(),avance();avance();avance();
            ^